z-index issues

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -7,6 +7,7 @@ nav {
   top: 0;
   left: 0;
   right: 0;
+  z-index:1;
 }
 h1 {
   font-size: 1.75em;
